added second webpage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="#">Merchandise</a></li>
             <li><a href="#">Donate</a></li>
             <li><a href="#">Contact Us</a></li>
