--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
     <!-- Logo -->
     <img src="images/logo.png" alt="Lambda Chi Alpha Logo" width="150" height="150">    <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="#">Merchandise</a></li>
