--- a/events.html
+++ b/events.html
@@ -24,8 +24,10 @@
 
     <!-- Events Content -->
     <section id="eventsList">
-        <!-- Dynamic event list  -->
+        <h2>Event Details</h2> 
+        <!-- Dynamic event list -->
     </section>
+
 
     <script src="js/events.js"></script>
 </body>
