--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lambda Chi Alpha - Events</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/events.css">
 </head>
 <body>
     <!-- Logo -->
@@ -13,7 +14,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="#">Merchandise</a></li>
+            <li><a href="merchandise.html">Merchandise</a></li>
             <li><a href="#">Donate</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
