--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="#">Merchandise</a></li>
+            <li><a href="merchandise.html">Merchandise</a></li>
             <li><a href="#">Donate</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
