--- a/merchandise.html
+++ b/merchandise.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta viewport="width=device-width, initial-scale=1.0">
+    <!-- Corrected viewport meta tag below -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merchandise - Lambda Chi Alpha</title>
     <link rel="stylesheet" href="css/merchandise.css">
     <link rel="stylesheet" href="css/style.css">
