added contactus and aboutus

--- a/events.html
+++ b/events.html
@@ -12,11 +12,11 @@
     <img src="images/logo.png" alt="Lambda Chi Alpha Logo" width="150" height="150">    <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="merchandise.html">Merchandise</a></li>
-            <li><a href="#">Donate</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="donate.html">Donate</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -29,7 +29,8 @@
         <!-- Dynamic event list -->
     </section>
 
-
+    <<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/events.js"></script>
 </body>
 </html>
