--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="merchandise.html">Merchandise</a></li>
-            <li><a href="#">Donate</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="donate.html">Donate</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
         </ul>
     </nav>
 
