--- a/merchandise.html
+++ b/merchandise.html
@@ -14,11 +14,11 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Donate</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="merchandise.html">Merchandise</a></li>
+            <li><a href="donate.html">Donate</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
         </ul>
     </nav>
     
@@ -31,7 +31,8 @@
     </section>
 
     <div id="new-arrivals"></div>
-    
+    <<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/merchandise.js"></script>
 </body>
 </html>
