--- a/contactus.html
+++ b/contactus.html
@@ -42,7 +42,7 @@
         <p>Email: <a href="mailto:nfaciano@uri.edu">nfaciano@uri.edu</a></p>
     </footer>
     
-    <<<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/contactus.js"></script>
 </body>
