--- a/donate.html
+++ b/donate.html
@@ -45,7 +45,7 @@
         <p>For more information or assistance, please contact us at <a href="mailto:nfaciano@uri.edu">nfaciano@uri.edu</a>.</p>
     </footer>
 
-    <<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/donate.js"></script>
     
