--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
         <!-- Dynamic event list -->
     </section>
 
-    <<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/events.js"></script>
 </body>
