--- a/merchandise.html
+++ b/merchandise.html
@@ -31,7 +31,7 @@
     </section>
 
     <div id="new-arrivals"></div>
-    <<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/merchandise.js"></script>
 </body>
