--- a/events.html
+++ b/events.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <!-- Logo -->
-    <img src="images/logo.png" alt="Lambda Chi Alpha Logo" width="150" height="150">    <nav>
+    <img src="images/logo.png" alt="Lambda Chi Alpha Logo" width="150" height="150">
+    <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
@@ -23,10 +24,16 @@
     <!-- Page Heading -->
     <h1>Upcoming Events</h1>
 
-    <!-- Events Content -->
+    <!-- Events Content and Buttons for Dynamic Loading -->
     <section id="eventsList">
-        <h2>Event Details</h2> 
-        <!-- Dynamic event list -->
+        <h2>Event Details</h2>
+        <!-- Dynamic event list placeholder -->
+        
+        <!-- Buttons to trigger Ajax content loading -->
+        <button id="loadHtmlBtn">Load HTML Events</button> <!-- Added this button -->
+        <button id="loadXmlBtn">Load XML Events</button>
+        <button id="loadJsonBtn">Load JSON Events</button>
+        <button id="loadHtmlJQueryBtn">Load HTML with jQuery</button>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
