--- a/events.html
+++ b/events.html
@@ -38,6 +38,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <script src="js/loadHtmlEvents.js"></script>
+    <script src="js/loadXmlEvents.js"></script>
+    <script src="js/loadJsonEvents.js"></script>
+    <script src="js/loadHtmlWithJQuery.js"></script>
     <script src="js/events.js"></script>
 </body>
 </html>
