--- a/data/jquery-content.html
+++ b/data/jquery-content.html
@@ -1,20 +1,15 @@
-<div class="item">
-    <h2>Exclusive Collection</h2>
-    <p>Discover our exclusive collection featuring a sweatshirt, two distinct shirts, and a stylish hat.</p>
+<div class="event">
+    <h3>Day at the Estate</h3>
+    <p>Date: September 20, 2024</p>
+    <p>Location: Estate Grounds</p>
 </div>
-<div class="item">
-    <h3>Sweatshirt</h3>
-    <p>Only $45.99</p>
+<div class="event">
+    <h3>Wing Night</h3>
+    <p>Date: September 22, 2024</p>
+    <p>Location: Local Pub</p>
 </div>
-<div class="item">
-    <h3>Shirt 1</h3>
-    <p>Only $29.99</p>
-</div>
-<div class="item">
-    <h3>Shirt 2</h3>
-    <p>Only $35.99</p>
-</div>
-<div class="item">
-    <h3>Hat</h3>
-    <p>Only $19.99</p>
+<div class="event">
+    <h3>Bid Day</h3>
+    <p>Date: September 27, 2024</p>
+    <p>Location: Chapter House</p>
 </div>
