--- a/data/events-data.html
+++ b/data/events-data.html
@@ -1,16 +1,15 @@
-<!-- additional-content.html -->
 <div class="event">
     <h3>Day at the Estate</h3>
     <p>Date: 2024-09-20</p>
-    <p>A relaxing day at the historical Green Estate</p>
+    <p>Location: Estate Grounds</p>
 </div>
 <div class="event">
     <h3>Wing Night</h3>
     <p>Date: 2024-09-22</p>
-    <p>Join us for a fun night of wings, drinks, and good company!</p>
+    <p>Location: Local Pub</p>
 </div>
 <div class="event">
     <h3>Bid Day</h3>
     <p>Date: 2024-09-27</p>
-    <p>Celebrate the new members of our community!</p>
+    <p>Location: Chapter House</p>
 </div>
