--- a/merchandise.html
+++ b/merchandise.html
@@ -32,8 +32,9 @@
 
     <div id="new-arrivals"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <script src="js/loadXmlMerch.js"></script>
     <script src="js/merchandise.js"></script>
+
 
 
 </body>
