--- a/contactus.html
+++ b/contactus.html
@@ -35,9 +35,8 @@
     </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-    src=
-    "js/loadJson.js"
-    </script>
+    <script>src="js/loadJson.js"</script>
+    <script>src="js/contactus.js"</script>
+
 </body>
 </html>
