--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="merchandise.html">Merchandise</a></li>
+            <li><a href="events.php">Events</a></li>
+            <li><a href="merchandise.php">Merchandise</a></li>
             <li><a href="donate.html">Donate</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
         </ul>
