--- a/contactus.html
+++ b/contactus.html
@@ -9,15 +9,17 @@
 <body>
     <img src="images/logo.png" alt="Lambda Chi Alpha Logo" width="150" height="150">
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="events.php">Events</a></li>
-            <li><a href="merchandise.php">Merchandise</a></li>
-            <li><a href="donate.html">Donate</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="index.php">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="events.php">Events</a></li>
+                <li><a href="merchandise.php">Merchandise</a></li>
+                <li><a href="donate.html">Donate</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="?logout">Logout</a></li>
+            </ul>
+        </nav>
 
     <h1>Contact Lambda Chi Alpha</h1>
     
