--- a/donate.html
+++ b/donate.html
@@ -12,12 +12,13 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.php">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="events.php">Events</a></li>
             <li><a href="merchandise.php">Merchandise</a></li>
             <li><a href="donate.html">Donate</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="?logout">Logout</a></li>
         </ul>
     </nav>
     
